@@ -9,6 +9,7 @@
 - Fixed issue #0000017 (server crash after DCI copy)
 - Fixed memory leaks in DCI cache management
 - Added interface for processing SNMP traps by server modules
+- Added internal parameter ChildStatus(*)
 
 
 *
